Closed Bug 1123842 Opened 9 years ago Closed 9 years ago

don't allow ipc accessibility to ride the 37 train

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37
Tracking Status
firefox35 --- unaffected
firefox36 --- unaffected
firefox37 --- fixed
firefox38 --- unaffected

People

(Reporter: tbsaunde, Assigned: tbsaunde)

Details

Attachments

(1 file)

This code is only useful with e10s on, and that's not the default for
this train, so enabling this code incurs risk for no purpose.
Comment on attachment 8551947 [details] [diff] [review]
don't allow ipc accessibility to ride the 37 train

Approval Request Comment
[Feature/regressing bug #]: none / e10s a11y meta bug
[User impact if declined]: crashes
[Describe test coverage new/current, TreeHerder]:n/a
[Risks and why]:  low, this is just disabling new code.
[String/UUID change made/needed]:
Attachment #8551947 - Flags: review?(dbolter)
Attachment #8551947 - Flags: approval-mozilla-aurora?
Comment on attachment 8551947 [details] [diff] [review]
don't allow ipc accessibility to ride the 37 train

Thanks for flagging that this should be disabled in 37. Aurora+
Attachment #8551947 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Ack. Jumped the gun. This has Aurora approval to land once dbolter providers an r+.
Comment on attachment 8551947 [details] [diff] [review]
don't allow ipc accessibility to ride the 37 train

Review of attachment 8551947 [details] [diff] [review]:
-----------------------------------------------------------------

r=me, note we could use accessibility.ipc_architecture.enabled if we want people to be able to experiment.
Attachment #8551947 - Flags: review?(dbolter) → review+
(In reply to David Bolter [:davidb] from comment #5)
> Comment on attachment 8551947 [details] [diff] [review]

> r=me, note we could use accessibility.ipc_architecture.enabled if we want
> people to be able to experiment.

turned to false by default as I suggested ;)
(In reply to David Bolter [:davidb] from comment #5)
> Comment on attachment 8551947 [details] [diff] [review]
> don't allow ipc accessibility to ride the 37 train
> 
> Review of attachment 8551947 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> r=me, note we could use accessibility.ipc_architecture.enabled if we want
> people to be able to experiment.

I don't see why we want anybody to experiment with stuff that's old and known to be broken.  So we might as well let the compiler remove code that is under checks of this.
https://hg.mozilla.org/releases/mozilla-aurora/rev/cedca912633b
Assignee: nobody → tbsaunde+mozbugs
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: