Bug 1123842 - Don't allow IPC accessibility to ride the 37 train. r=dbolter, a=lmandel

This code is only useful with e10s on, and that's not the default for
this train, so enabling this code incurs risk for no purpose.